# vision-matcher

./: .dockerignore  .eslintrc.js  .gitignore  .prettierignore  .release-please-config.json  .release-please-manifest.json  CHANGELOG.md  Dockerfile  README.md  build_face_matcher.sh  docker-compose.yml  download_face_match_model.sh  face_matcher.cpp  package-lock.json  package.json  pnpm-lock.yaml  run_tests.sh  server.js  server_config.json  steps.txt  tsconfig.json
.github/workflows/: cd.yml  ci.yml
charts/: Chart.yaml  README.md  values.yaml
charts/templates/: deployment.yaml
face_matcher/: CMakeLists.txt  argument_parser.cpp  argument_parser.h  build_face_matcher.sh  cmake_build_face_matcher.sh  face_matcher.cpp  main.cpp  utils.cpp
face_matcher/include/: detector.h  face_extractor.h  prediction.h  utils.h
face_matcher/src/: detector.cpp  face_extractor.cpp  prediction.cpp
src/: app.ts  config.ts  index.ts  interfaces.ts
src/utils/: checkImageSize.ts  imagesProcessor.ts  logger.ts
test/: euclidean_config.json  faceMatchEndpoint.test.mjs
